--- a/app/views/end-to-end/post-mvp2/front-door/landing.html
+++ b/app/views/end-to-end/post-mvp2/front-door/landing.html
@@ -78,9 +78,9 @@
         </div>
 
 
-        <hr class="grey-border">
+        {# <hr class="grey-border"> #}
 
-        <h2 class="govuk-heading-m">
+        {# <h2 class="govuk-heading-m">
           Manage other business tasks
         </h2>
 
@@ -93,15 +93,15 @@
         {% else %}
         <p>You'll need to <a class="govuk-link govuk-link--no-visited-state" href="/to-be/v3/rps/sign-in">
           sign in to the Rural Payments service</a> to view and update:</p>
-        {% endif %}
+        {% endif %} #}
 
 
       
-        <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-1">
+        {# <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-1">
           <li>land and maps</li>
           <li>Countryside Stewardship (CS)</li>
           <li>who has permission to act on behalf of your business</li>
-        </ul>
+        </ul> #}
 
       
           
