--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
@@ -29,7 +29,10 @@
                 <h2 class="govuk-prototype-kit-task-list__section">
                     <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register your interest
                 </h2>
-                <p>You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
+                <div class="govuk-inset-text">
+                    You must complete this stage by 11.59pm on <strong>3 February 2025</strong>
+                  </div>
+                
 
                 <ul class="govuk-task-list">
                     <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -76,7 +79,10 @@
                 </li> #}
                 </ul>
             </li>
-            <p class="govuk-body" style="margin-top: 0em; margin-bottom: 2em;">We’ll let you know the outcome of our review by <strong>19 May 2025</strong></p>
+            <div class="govuk-inset-text">
+                We’ll let you know the outcome of our review by <strong>19 May 2025</strong></strong>
+              </div>
+
     
                 <li>
                     <!-- Application Scenario 2a -->
@@ -130,7 +136,9 @@
             <h2 class="govuk-prototype-kit-task-list__section">
             <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit your application
             </h2>
-            <p>You must submit your full application by 11.59pm on <strong>3 January 2026</strong></p>
+            <div class="govuk-inset-text">
+                You must submit your full application by 11.59pm on <strong>3 January 2026</strong>
+              </div>
 
             <ul class="govuk-task-list">
             <li class="govuk-task-list__item">
