--- a/app/views/end-to-end/logged-in-nav-v3.html
+++ b/app/views/end-to-end/logged-in-nav-v3.html
@@ -21,7 +21,7 @@
     </div>
     <div class="govuk-header__content">
       <a href="/to-be/v3/start/your-businesses-list" class="govuk-header__link govuk-header__service-name">
-        Manage your land and farm businesses
+        Rural Payments
       </a>
       <nav aria-label="Menu" class="govuk-header__navigation">
         <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" hidden>
