--- a/app/views/end-to-end/post-mvp2/eligibility/common/country.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/country.html
@@ -22,14 +22,12 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Is the planned project in England?',
+                            text: 'Is the site of the planned project in England?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
-                    hint: {
-                        text: 'The site where the work will happen'
-                    },
+                    
                     items: [
                         {
                             text: 'Yes',
