--- a/app/views/end-to-end/post-mvp2/eligibility/common/login.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/login.html
@@ -17,7 +17,7 @@
             <form method="post" action="choose-business">
 
                 <h1 class="govuk-heading-l">
-                    Sign in using your Rural Payments account
+                    Sign in with Rural Payments
                 </h1>
 
                 <p>By signing in you'll be able to:</p>
