--- a/app/views/end-to-end/post-mvp2/eligibility/common/project-start.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/project-start.html
@@ -17,7 +17,7 @@
                     name: 'project-start',
                     fieldset: {
                         legend: {
-                            text: 'Have you already started work on the project?',
+                            text: 'Have you started work on the project?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
