--- a/app/views/end-to-end/post-mvp2/eligibility/funding/check-details.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/funding/check-details.html
@@ -98,7 +98,7 @@
                     <tr class="govuk-table__row">
                         <div class="govuk-summary-list__row--no-border">
                             <dt class="govuk-summary-list__key">
-                                <p class="govuk-body govuk-!-font-size-24"><strong>Business details</strong></p>
+                                <p class="govuk-body govuk-!-font-size-24"><strong>Organisation details</strong></p>
                             </dt>
                             <dd class="govuk-summary-list__actions">
                                 <a class="govuk-link" href="farmer-details">
