--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
@@ -27,9 +27,13 @@
                 <li>
                     <!-- EOI Scenario 3b -->
                     <h2 class="govuk-prototype-kit-task-list__section">
-                        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register your interest
+                        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register interest
                     </h2>
-                    <p class="govuk-body">You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
+
+                    <div class="govuk-inset-text">
+  You must register your interest by 11.59pm on <strong>3 February 2025</strong>.
+</div>
+                    
 
                     <ul class="govuk-task-list">
                     <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -51,7 +55,7 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Enter your organisation's details</a>
+                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Check your organisation's details</a>
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                         <strong class="govuk-tag govuk-tag--blue">
@@ -69,7 +73,7 @@
                 </li>
                 <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
-                        Submit your project details for us to review
+                        Register your interest
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-3-status">
                         Cannot start yet
@@ -85,19 +89,21 @@
                 </li> #}
                 </ul>
             </li>
-            <p class="govuk-body" style="margin-top: 0em; margin-bottom: 2em;">We'll let you know the outcome of our review by <strong>19 May 2025</strong></p>
+            <div class="govuk-inset-text">
+  We’ll contact you by <strong>19 May 2025</strong> to confirm whether or not you can make a full application.
+</div>
     
                 <li>
                     <!-- Application Scenario 2a -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">3. </span> Prepare your application
+                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Prepare application
                 </h2>
 
                 <ul class="govuk-task-list">
 
                     <li class="govuk-task-list__item">
                         <div class="govuk-task-list__name-and-hint">
-                            Download your application forms
+                            Download application forms
                         </div>
                         <div class="govuk-task-list__status" id="application-1-status">
                             Cannot start yet
@@ -137,9 +143,14 @@
 
             <!-- Agreement Scenario 1 -->
             <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit your application
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit application
             </h2>
-            <p>You must submit your full application by 11.59pm on <strong>3 January 2026</strong></p>
+
+ <div class="govuk-inset-text">
+  You must submit your application by 11.59pm on <strong>3 January 2026.
+</div>
+
+                
 
             <ul class="govuk-task-list">
             <li class="govuk-task-list__item">
