--- a/app/views/end-to-end/post-mvp2/eligibility/common/check-answers.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/check-answers.html
@@ -11,20 +11,10 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
 
-        <h1 class="govuk-heading-l">Check your answers before sending your application</h1>
+        <h1 class="govuk-heading-l">Check your answers</h1>
         <h2 class="govuk-heading-m">Project details</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              What crops are you growing?
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{ data['farming-type'] }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="farming-type">Change<span class="govuk-visually-hidden"> what crops are you going?</span></a>
-            </dd>
-          </div>
+       
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              Legal status
@@ -80,17 +70,7 @@
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a>
             </dd>
           </div> #}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-               Does the project need an abstraction licence or a variation of one?
-            </dt>
-            <dd class="govuk-summary-list__value">
-               {{ data['abstraction-licence'] }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> can you pay the remainig costs</span></a>
-            </dd>
-          </div>
+         
         </dl>
         
         {# <h2 class="govuk-heading-m">Application details</h2>
@@ -142,9 +122,14 @@
         </dl> #}
 
         <!-- Moved from consent.html to align with best practice - user can see what they're agreeing to on same page as per GDS pattern -->
-        <h2 class="govuk-heading-m">Now send your application</h2>
-          <p class="govuk-body">I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
-          {# <p class="govuk-body">I understand the project’s eligibility and score is based on the answers I provided.</p>
+        <h2 class="govuk-heading-m">Before you continue</h2>
+          <p class="govuk-body">You need to confirm that you understand:</p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>the answers given here will be used in your full application</li>
+            <li>any future changes to this information may affect your eligibility for this grant</li>
+          </ul>
+          {# 
           
           <p class="govuk-body">I am aware that the information I submit will be:</p>  
             <ul class="govuk-list govuk-list--bullet">
@@ -172,7 +157,7 @@
         <form action="confirmation" method="post" novalidate>
           <input type="hidden" name="answers-checked" value="true">
           <button type="submit" class="govuk-button" data-module="govuk-button">
-            Accept and send
+            Confirm and continue
           </button>
         </form>
         
