--- a/app/views/end-to-end/post-mvp2/eligibility/common/confirmation.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/confirmation.html
@@ -13,15 +13,15 @@
 
     <div class="govuk-panel govuk-panel--confirmation">
        <h1 class="govuk-panel__title">
-        You are eligible
+        You are eligible to use this service
        </h1>
     <div class="govuk-panel__body">
-     Anything else needed?
+     
       {# <br><strong>WM-VMA-A54</strong> #}
     </div>
   </div>
 
-      <p class="govuk-body">We have sent you a confirmation email with a record of your answers.</p>
+     {# <p class="govuk-body">We have sent you a confirmation email with a record of your answers.</p>
       {# <p>If you do not get an email within 72 hours, please call the RPA helpline and follow the options for the Farming Transformation Fund scheme:</p>
       <h2 class="govuk-heading-m">RPA helpline</h2>
 
@@ -63,11 +63,10 @@
 
         <h2 class="govuk-heading-m">What to do now</h2>
 
-        <ol class="govuk-list govuk-list--number">
-          <li>Provide your project details</li>
-          <li>You'll be given a score which shows how aligned you are with policy</li>
-          <li>You'll send this to the RPA and they'll give you a shout</li>
-        </ol>
+        <p>You need to check your project meets our funding priorities before registering your interest in the Water Management grant.</p>
+
+    
+       
 
           <br>
           <form class="form" action="login" method="post">
@@ -81,6 +80,6 @@
                 </form>
       </div>
 
-      <p><a href="#" class="govuk-link">What do you think of this service?</a></p>
+     
 
 {% endblock %}
