--- a/app/views/end-to-end/post-mvp2/eligibility/common/legal-status.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/legal-status.html
@@ -17,7 +17,7 @@
                     name: 'legal-status',
                     fieldset: {
                         legend: {
-                            text: 'What is the legal status of the business?',
+                            text: 'What is the legal status of the organisation?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
