--- a/app/views/end-to-end/post-mvp2/start-page.html
+++ b/app/views/end-to-end/post-mvp2/start-page.html
@@ -15,9 +15,9 @@
         Apply for a Water Management grant
       </h1>
 
-      <p>Use this service to apply for a Water Management grant.</p>
+      <p>Use this service to apply for round 3 of the Water management grant.</p>
       {{ govukInsetText({
-        text: "This is round 3 of the Water Management grant. Your full application must be submitted by 11.59pm on 3 January 2026."
+        text: "You must register your interest in this grant by 3 February 2025."
       }) }}
           
         </inset>
@@ -33,17 +33,17 @@
           <h2 class="govuk-heading-m">How it works</h2>
           <p>There are 3 stages to the application process.</p>
           <ol class="govuk-list govuk-list--number">
-            <li>Tell us some basic details about your project by 3 February 2025. We'll review your project against our funding priorities.</li>
-            <li>If successful, you'll be invited to make a full application by 19 May 2025.</li>
+            <li>Register your interest by 3 February 2025. We'll review your project against our funding priorities.</li>
+            <li>If your project is suitable, we’ll invite you to make a full application by 19 May 2025.</li>
             <li>Submit your full application by 3 January 2026.</li>
           </ol>
 
           {{ govukInsetText({
-            text: "We cannot guarantee you'll receive a grant until we assess your full application."
+            text: "This grant is competitive. We’ll score projects against our funding priorities and award grants to the strongest applications."
           }) }}
 
           <h2 class="govuk-heading-m">Before you apply</h2>
-            <p>Read the <a href="#">latest guidance on the Water Management grant</a> to learn about our grant funding priorities.</p>  
+            <p>Read the <a href="#">latest guidance about the grant, what it can pay for and who can apply</a> to learn if your project meets our funding priorities.</p>  
 
             <h2 class="govuk-heading-m">What you'll need</h2>
             <p>You'll need to give us:</p>
@@ -105,9 +105,6 @@
               </h2>
                 <p>
                   <a href="#">About the grant, what it can pay for and who can apply</a></p>
-                </p>
-                <p>
-                  <a href="#">Quick guide to our funding priorities</a>
                 </p>
           </div>
 
