More content changes
For UR

--- a/app/views/end-to-end/post-mvp2/eligibility/common/application-saved.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/application-saved.html
@@ -20,18 +20,18 @@
                     Your application has been saved
                 </h1>
 
-                <p>Any information you entered has been saved.</p>
+        
 
                 <p>Any information you entered has been saved.</p>
                 
-                <p>You can return to your grant application through:</p>
+                <p>You can return to your application through:</p>
                 <ul class="govuk-list govuk-list--bullet">
                     <li>the <a href="../../start-page">Apply for a Water Management grant service</a></li>
-                    <li>your <a href="../../front-door/login">Rural Payments account</a></li>
-                    <li>the email we sent when you started your application</li>
+                    <li>the <a href="../../front-door/login">Rural Payments service</a></li>
+                    <li>the email we sent when you signed in to this service</li>
                 </ul>
 
-                 <p>You can <a href="javascript:history.back()">return to your application</a> or view your <a href="#">Rural Payments account</a>.</p>
+               
 
                 <br>   
                  {{ govukButton({
