header link fix and project name persistance

--- a/app/views/end-to-end/post-mvp2/eligibility/common/farming-type.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/farming-type.html
@@ -1,4 +1,4 @@
-{% extends 'end-to-end/layout.html' %}
+{% extends 'end-to-end/layout2.html' %}
 
 {% block pageTitle %}
     What crops are you growing?
