--- a/app/views/end-to-end/post-mvp2/eligibility/common/name-project.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/name-project.html
@@ -32,9 +32,9 @@
                         label: {
                           text: "Project name"
                         },
-                        
-                        id: "event-name",
-                        name: "eventName",
+                        value: data['project-name'] if data['project-name'] else '',
+                        id: "project-name",
+                        name: "project-name",
                         classes: "govuk-input--width-20"
                       }) }}
 
