--- a/app/views/end-to-end/post-mvp2/front-door/landing.html
+++ b/app/views/end-to-end/post-mvp2/front-door/landing.html
@@ -59,7 +59,7 @@
               <a class="govuk-link govuk-link--no-visited-state" href="grant-page">
                 <div class="gem-c-cards__list-item-wrapper-variant">
                   <h3 class="gem-c-cards__sub-heading govuk-heading-s link-style govuk-link">Water Management grant</h3>
-                  <p class="govuk-body-s gem-c-cards__description p-link-style">Manage your application and claim</p>          
+                  <p class="govuk-body-s gem-c-cards__description p-link-style">Manage {{ data['project-name'] or 'Browns Hill Farm reservoir' }} (WM-VMA-1234) application</p>          
                 </div>
               </a>  
             </li>
