--- a/app/views/end-to-end/post-mvp2/eligibility/common/abstraction-licence.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/abstraction-licence.html
@@ -1,4 +1,4 @@
-{% extends 'end-to-end/layout.html' %}
+{% extends 'end-to-end/layout2.html' %}
 
 {% block pageTitle %}
      Does the project need an abstraction licence or a variation of one?
