--- a/app/views/end-to-end/post-mvp2/eligibility/common/country.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/country.html
@@ -1,4 +1,4 @@
-{% extends 'end-to-end/layout.html' %}
+{% extends 'end-to-end/layout2.html' %}
 
 {% block pageTitle %}
     Is the planned project in England?
