--- a/app/views/end-to-end/post-mvp2/eligibility/common/sign-out.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/sign-out.html
@@ -1,5 +1,5 @@
 {% set hideBackButton = true %}
-{% extends 'end-to-end/layout.html' %}
+{% extends 'end-to-end/layout2.html' %}
 
 {% block pageTitle %}
     You've signed out
