--- a/app/views/end-to-end/post-mvp2/start-page-old.html
+++ b/app/views/end-to-end/post-mvp2/start-page-old.html
@@ -1,6 +1,6 @@
 {% set hideBackButton = true %}
 
-{% extends 'end-to-end/layout.html' %}
+{% extends 'end-to-end/layout2.html' %}
 
 {% block pageTitle %}
   Check if you can apply for a Water Management Grant
