--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-0-latest.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-0-latest.html
@@ -2,7 +2,7 @@
 
 {% if nosignin == 'true' %}
 
-    {% extends 'end-to-end/layout.html' %}  
+    {% extends 'end-to-end/layout2.html' %}  
 
 {% else %}     
 
