task list updates

--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
@@ -31,14 +31,15 @@
                     </h2>
 
                     <div class="govuk-inset-text">
-  You must register your interest by 11.59pm on <strong>3 February 2025</strong>.
-</div>
-                    
+                        You must register your interest by 11.59pm on <strong>3 February 2025</strong>.
+                    </div>
+                                        
 
                     <ul class="govuk-task-list">
                     <li class="govuk-task-list__item govuk-task-list__item--with-link">
                         <div class="govuk-task-list__name-and-hint">
-                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/common/country" aria-describedby="expression-of-interest-1-status">Check your eligibility</a>
+                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/common/country" aria-describedby="expression-of-interest-1-status">
+                            Check your eligibility</a>
                         </div>
                         <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                                 Completed
@@ -55,7 +56,8 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Check your organisation's details</a>
+                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">
+                        Check your organisation's details</a>
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                         <strong class="govuk-tag govuk-tag--blue">
