--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
@@ -27,17 +27,18 @@
 
                 <!-- EOI Scenario 3b -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register your interest
+                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register interest
                 </h2>
                 <div class="govuk-inset-text">
-                    You must complete this stage by 11.59pm on <strong>3 February 2025</strong>
+                    You must register your interest by 11.59pm on <strong>3 February 2025</strong>
                   </div>
                 
 
                 <ul class="govuk-task-list">
                     <li class="govuk-task-list__item govuk-task-list__item--with-link">
                         <div class="govuk-task-list__name-and-hint">
-                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/common/country" aria-describedby="expression-of-interest-1-status">Check your eligibility</a>
+                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/common/country" aria-describedby="expression-of-interest-1-status">
+                            Check your eligibility</a>
                         </div>
                             <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                                 Completed
@@ -45,7 +46,8 @@
                     </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-2-status">Enter your organisation's details</a>
+                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-2-status">
+                        Check your organisation's details</a>
                     </div>
                         <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                             Completed
@@ -53,7 +55,8 @@
                 </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                        <a class="govuk-link govuk-task-list__link" href="../eligibility/common/project-items.html" aria-describedby="expression-of-interest-3-status">Check your project meets our funding priorities</a>
+                        <a class="govuk-link govuk-task-list__link" href="../eligibility/common/project-items.html" aria-describedby="expression-of-interest-3-status">
+                            Check your project meets our funding priorities</a>
                     </div>
                     <div class="govuk-task-list__status" id="application-1-status">
                         <strong class="govuk-tag govuk-tag--blue">
@@ -63,7 +66,7 @@
                 </li>
                 <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
-                        Submit your project details for us to review
+                        Register your interest
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-3-status">
                         Cannot start yet
@@ -80,7 +83,7 @@
                 </ul>
             </li>
             <div class="govuk-inset-text">
-                We’ll let you know the outcome of our review by <strong>19 May 2025</strong></strong>
+                We'll contact you by <strong>19 May 2025</strong> to confirm whether or not you can make a full application.
               </div>
 
     
