added Matt's content to fix clash

--- a/app/views/end-to-end/post-mvp2/eligibility/common/check-answers.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/check-answers.html
@@ -123,10 +123,10 @@
 
         <!-- Moved from consent.html to align with best practice - user can see what they're agreeing to on same page as per GDS pattern -->
         <h2 class="govuk-heading-m">Before you continue</h2>
-          <p class="govuk-body">You need to confirm that you understand:</p>
+          <p class="govuk-body">Confirm you understand that:</p>
 
           <ul class="govuk-list govuk-list--bullet">
-            <li>the answers given here will be used in your full application</li>
+            <li>the answers shown here will be used in your full application</li>
             <li>any future changes to this information may affect your eligibility for this grant</li>
           </ul>
           {# 
