--- a/app/views/end-to-end/post-mvp2/eligibility/common/confirmation.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/confirmation.html
@@ -3,7 +3,7 @@
 {% set hideBackButton = true %}
 
 {% block pageTitle %}
-     Details submitted
+  You are eligible to register your interest
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
 
     <div class="govuk-panel govuk-panel--confirmation">
        <h1 class="govuk-panel__title">
-        You are eligible to use this service
+        You are eligible to register your interest
        </h1>
     <div class="govuk-panel__body">
      
@@ -61,12 +61,9 @@
           <li>apply for planning permission or an abstraction licence</li>
         </ul> #}
 
-        <h2 class="govuk-heading-m">What to do now</h2>
+        <h2 class="govuk-heading-m">What happens next</h2>
 
-        <p>You need to check your project meets our funding priorities before registering your interest in the Water Management grant.</p>
-
-    
-       
+        <p>You need to check your project meets our funding priorities before registering your interest in the Water Management grant.</p>    
 
           <br>
           <form class="form" action="login" method="post">
