--- a/app/views/end-to-end/post-mvp2/eligibility/common/sign-out.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/sign-out.html
@@ -21,15 +21,19 @@
                     You've signed out
                 </h1>
 
+                <h1 class="govuk-heading-l">
+                    You've signed out
+                </h1>
+
                <p>Any information you entered has been saved.</p>
                 
                 <p>You can return to your application through:</p>
                 <ul class="govuk-list govuk-list--bullet">
                     <li>the <a href="../../start-page">Apply for a Water Management grant service</a></li>
                     <li>the <a href="../../front-door/login">Rural Payments service</a></li>
-                    <li>the email we sent when you signed in to this service</li>
+                    <li>the <a href="/end-to-end/post-mvp2/eligibility/common/email">email</a> we sent when you signed in to this service</li>
                 </ul>
-<br>   
+                <br>   
                 
             </form>
 
