--- a/app/views/end-to-end/post-mvp2/start-page.html
+++ b/app/views/end-to-end/post-mvp2/start-page.html
@@ -15,7 +15,7 @@
         Apply for a Water Management grant
       </h1>
 
-      <p>Use this service to apply for round 3 of the Water management grant.</p>
+      <p>Use this service to apply for round 3 of the Water Management grant.</p>
       {{ govukInsetText({
         text: "You must register your interest in this grant by 3 February 2025."
       }) }}
