--- a/app/views/end-to-end/post-mvp2/front-door/grant-page.html
+++ b/app/views/end-to-end/post-mvp2/front-door/grant-page.html
@@ -6,7 +6,7 @@
 
 {# {% include "to-be/v3/components/sub-header/include.html" %} #}
 
-<a href="/to-be/v3/landing/landing" class="govuk-back-link govuk-!-margin-bottom-0">Back to your business</a>
+<a href="#" class="govuk-back-link govuk-!-margin-bottom-0">Back to your business</a>
 
 {% endblock %} 
 
@@ -15,7 +15,6 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-
 
     <h1 class="govuk-heading-xl">
       Water Management grant applications and agreements
@@ -38,7 +37,7 @@
           <td class="govuk-table__cell">{{ data['project-name'] or 'Browns Hill Farm reservoir' }}</td>
           <td class="govuk-table__cell">WM-VMA-1234</td>
           {# <td class="govuk-table__cell">No</td> #}
-          <td class="govuk-table__cell">06/03/2024</td>
+          <td class="govuk-table__cell">10 December 24</td>
           <td class="govuk-table__cell">Need to submit expression of interest</td>
           <td class="govuk-table__cell">
             <form action="../task-list2/list-1-1" method="get">
