linking to email

--- a/app/views/end-to-end/post-mvp2/eligibility/common/application-saved.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/application-saved.html
@@ -28,7 +28,7 @@
                 <ul class="govuk-list govuk-list--bullet">
                     <li>the <a href="../../start-page">Apply for a Water Management grant service</a></li>
                     <li>the <a href="../../front-door/login">Rural Payments service</a></li>
-                    <li>the email we sent when you signed in to this service</li>
+                    <li>the <a href="email">email</a> we sent when you signed in to this service</li>
                 </ul>
 
                
